[package]
name = "jailer"
version = "0.1.1"
edition = "2021"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/jailer"
repository = "https://github.com/iamsauravsharma/jailer"
description = "Crate which helps in creation of sandbox environment"
license = "MIT"
readme = "README.MD"
keywords = ["jailer", "sandbox"]

[dependencies]
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
tempfile = "3.9.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
