[package]
name = "jailer"
version = "0.3.0"
edition = "2024"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
homepage = "https://github.com/iamsauravsharma/jailer"
repository = "https://github.com/iamsauravsharma/jailer"
description = "Crate which helps in creation of sandbox environment"
license = "MIT"
readme = "README.MD"
keywords = ["jailer", "sandbox"]

[dependencies]
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
tempfile = "3.10.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
ambiguous_negative_literals = "warn"
elided_lifetimes_in_paths = "warn"
meta_variable_misuse = "warn"
missing_docs = "warn"
redundant_imports = "warn"
unreachable_pub = "warn"
unstable_features = "deny"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
allow_attributes = "warn"
dbg_macro = "warn"
exhaustive_enums = "warn"
infinite_loop = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_test_prefix = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
unused_trait_names = "warn"
use_debug = "warn"
all = { level = "deny", priority = -1 }
pedantic = "warn"
